# local_precip_predictor

./: LICENSE  README.md  pyproject.toml
local_precip_predictor/: analysis.py  data.py  exec.py  web.py
